--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,11 +31,6 @@
     min-width: 250px;
 }
 
-.img_start {
-    
-}
-
-
 /* Section start */
 
 .img_portfolio {
@@ -72,3 +67,9 @@
     background-image: url(../img/submarine.png);
 }
 /* Section portfolio */
+
+.container_about {
+    background-color: var(--bf-primary-green);
+    height: 700px;
+}
+/* Section about */
