--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,6 +31,13 @@
     min-width: 250px;
 }
 
+.left_line, .right_line {
+    background-color: var(--bf-img-bg-dark);
+    height: 0.2rem;
+    width: 40%;
+    border-radius: 2rem;
+}
+
 /* Section start */
 
 .img_portfolio {
@@ -73,3 +80,8 @@
     height: 700px;
 }
 /* Section about */
+
+.container_me {
+    height: 600px;
+}
+/* Section contact me */
