--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,6 +33,11 @@
 .cb_bs_white {
     border: 1px solid var(--bf-text-white);
 }
+
+h1 {
+    padding-top: 2rem;
+}
+
 /* Header */
 
 .container_start {
@@ -47,13 +52,27 @@
     height: 0.2rem;
     width: 40%;
     border-radius: 2rem;
+    margin: 1rem 2%;
+    
+}
+
+.color_white {
+    background-color: var(--bf-text-white);
+}
+
+.cb_message_p {
+    padding-bottom: 5rem;
 }
 
 /* Section start */
 
+.container_portfolio {
+    margin-bottom: 3rem;
+    padding: 0 15%;
+}
+
 .img_portfolio {
     height: 300px;
-    min-width: 250px;
     background-size: cover;
     background-position: center;
     align-items: center;
@@ -88,12 +107,14 @@
 .container_about {
     background-color: var(--bf-primary-green);
     color: var(--bf-text-white);
-    height: 700px;
+    padding: 3rem 15%;
+
 }
 /* Section about */
 
 .container_me {
-    height: 600px;
+    margin-top: 5rem;
+    padding: 3rem 15%;
 }
 /* Section contact me */
 
