--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,6 +38,27 @@ h1 {
     padding-top: 2rem;
 }
 
+h6 {
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+}
+
+p {
+    padding: 0.5rem 0;
+}
+
+footer a {
+    text-decoration: none;
+}
+
+.container_about button i {
+    padding: 0 0.5rem;
+}
+
+
+
+/* Utilitis */
+
 /* Header */
 
 .container_start {
@@ -53,7 +74,6 @@ h1 {
     width: 40%;
     border-radius: 2rem;
     margin: 1rem 2%;
-    
 }
 
 .color_white {
@@ -72,11 +92,13 @@ h1 {
 }
 
 .img_portfolio {
-    height: 300px;
+    height: 250px;
+    min-width: 200px;
     background-size: cover;
     background-position: center;
     align-items: center;
     border-radius: 15px;
+    margin:  0.5rem 0rem;
 }
 
 .img_cabin {
@@ -113,7 +135,7 @@ h1 {
 /* Section about */
 
 .container_me {
-    margin-top: 5rem;
+    margin-top: 2rem;
     padding: 3rem 15%;
 }
 /* Section contact me */
@@ -128,7 +150,7 @@ h1 {
 .cb-icon {
     border: 1px solid var(--bf-text-white);
     border-radius: 50%;
-    margin: 0 0.4rem;
+    margin: 1rem 0.5rem;
     font-size: 0.8rem;
     aspect-ratio: 1 / 1;
 }
