--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -92,13 +92,12 @@ footer a {
 }
 
 .img_portfolio {
-    height: 250px;
-    min-width: 200px;
     background-size: cover;
     background-position: center;
     align-items: center;
     border-radius: 15px;
     margin:  0.5rem 0rem;
+    aspect-ratio: 3 / 2;
 }
 
 .img_cabin {
